<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/clearButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginLeft="16dp"
        android:background="@android:color/holo_red_dark"
        android:fontFamily="casual"
        android:text="Clear"
        android:textColor="@android:color/background_light"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        tools:text="@string/clearButton" />

    <EditText
        android:id="@+id/footText"
        android:layout_width="277dp"
        android:layout_height="59dp"
        android:layout_marginBottom="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:fontFamily="casual"
        android:hint="@string/foot"
        android:inputType="number|numberDecimal"
        android:textAlignment="center"
        android:textColor="@android:color/background_dark"
        app:layout_constraintBottom_toTopOf="@+id/ftMileCalcButton"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/mileCalculated"
        android:layout_width="278dp"
        android:layout_height="49dp"
        android:layout_marginBottom="118dp"
        android:layout_marginLeft="16dp"
        android:fontFamily="casual"
        android:text="0"
        android:textAlignment="center"
        android:textColor="@android:color/background_dark"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginRight="16dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintHorizontal_bias="0.509" />

    <Button
        android:id="@+id/ftMileCalcButton"
        android:layout_width="275dp"
        android:layout_height="56dp"
        android:layout_marginBottom="118dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:background="?attr/actionModeSplitBackground"
        android:fontFamily="casual"
        android:text="Calculate"
        android:textColor="@android:color/background_light"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/mileCalculated"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        tools:text="@string/ftMileCalcButton" />
</android.support.constraint.ConstraintLayout>