<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/temperatureTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:fontFamily="casual"
        android:text="Type of Temperature Conversion:"
        android:textAlignment="center"
        android:textColor="@android:color/background_dark"
        android:textSize="24sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/fah_cel"
        android:layout_width="302dp"
        android:layout_height="48dp"
        android:layout_marginEnd="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="211dp"
        android:background="?attr/actionModeSplitBackground"
        android:fontFamily="casual"
        android:text="@string/fah_cel"
        android:textColor="@android:color/background_light"
        android:textSize="12sp"
        android:textStyle="bold"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/temperatureTitle" />

    <Button
        android:id="@+id/fah_kel"
        android:layout_width="302dp"
        android:layout_height="48dp"
        android:layout_marginEnd="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="14dp"
        android:background="?attr/actionModeSplitBackground"
        android:fontFamily="casual"
        android:text="@string/fah_kel"
        android:textColor="@android:color/background_light"
        android:textSize="12sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cel_kel"
        app:layout_constraintHorizontal_bias="0.493" />

    <Button
        android:id="@+id/cel_kel"
        android:layout_width="302dp"
        android:layout_height="48dp"
        android:layout_marginEnd="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:background="?attr/actionModeSplitBackground"
        android:fontFamily="casual"
        android:text="@string/cel_kel"
        android:textColor="@android:color/background_light"
        android:textSize="12sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fah_cel" />

</android.support.constraint.ConstraintLayout>