<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.lwade.conversions.MainActivity"
    tools:showIn="@layout/activity_main">

    <TextView
        android:id="@+id/titleText"
        android:layout_width="320dp"
        android:layout_height="154dp"
        android:fontFamily="casual"
        android:text="What type of conversion do you want to use?"
        android:textAlignment="center"
        android:textColor="@android:color/background_dark"
        android:textSize="30sp"
        android:typeface="sans"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="16dp"
        android:layout_marginLeft="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginRight="16dp"
        app:layout_constraintRight_toRightOf="parent" />

    <Button
        android:id="@+id/tempButton"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="200dp"
        android:layout_height="46dp"
        android:background="?attr/actionModeSplitBackground"
        android:fontFamily="casual"
        android:text="@string/tempButton"
        android:textColor="@android:color/background_light"
        android:layout_marginLeft="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginRight="16dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@+id/lengthButton"
        android:onClick="tempActivity"/>

    <Button
        android:id="@+id/speedButton"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="200dp"
        android:layout_height="47dp"
        android:background="?attr/actionModeSplitBackground"
        android:fontFamily="casual"
        android:text="@string/speedButton"
        android:textAlignment="center"
        android:textColor="@android:color/background_light"
        android:layout_marginRight="16dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@+id/tempButton"
        android:onClick="speedActivity"/>

    <Button
        android:id="@+id/lengthButton"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="202dp"
        android:layout_height="44dp"
        android:background="?attr/actionModeSplitBackground"
        android:fontFamily="casual"
        android:text="@string/lengthButton"
        android:textColor="@android:color/background_light"
        android:layout_marginLeft="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginRight="16dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@+id/titleText"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="16dp"
        android:onClick="lengthActivity"/>
</android.support.constraint.ConstraintLayout>
